# outlook-mcp-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYSTEM_TEST_PLAN_2026-07-16-P10-12.md  SYSTEM_TEST_PLAN_2026-07-16.md  SYSTEM_TEST_RESULTS_2026-07-16-P10-12.md  SYSTEM_TEST_RESULTS_2026-07-16.md  TESTING.md
.claude/skills/live-outlook-system-test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  config.yml
.github/workflows/: ci.yaml
docs/superpowers/plans/: 2026-07-17-body-search-mail-and-tasks.md  2026-07-17-readme-standalone-rewrite.md  2026-07-18-network-transport.md
docs/superpowers/specs/: 2026-07-18-network-transport-design.md
src/: cli.rs  constants.rs  error.rs  friendly.rs  lib.rs  main.rs  server.rs  transport.rs
src/outlook/: client.rs  com.rs  fake.rs  mod.rs  types.rs
tests/: http_transport.rs  live_outlook.rs  system_test.rs  system_test_p10_12.rs  tools.rs
