[package]
name = "outlook-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
rmcp = { version = "2.1.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
