[package]
name = "outlook-mcp-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.45"
constant_time_eq = "0.3"
rmcp = { version = "2.1.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_System_Variant", "Win32_System_Ole", "Win32_Globalization", "Win32_Foundation", "Win32_System_Com_StructuredStorage"] }

[dev-dependencies]
rmcp = { version = "2.1.0", features = ["client", "transport-streamable-http-client-reqwest"] }
